--- a/composer.json
+++ b/composer.json
@@ -15,11 +15,17 @@
             "role": "Developer"
         }
     ],
+    "repositories": [
+        {
+            "type": "composer",
+            "url": "https://packages.hlx.dev"
+        }
+    ],
     "require": {
         "php": "^8.0",
         "astrogoat/strata": "^0.2.0",
         "spatie/laravel-package-tools": "^1.4.3",
-        "illuminate/contracts": "^8.37 || ^9.0"
+        "illuminate/support": "^8.37 || ^9.0 || ^10.0"
     },
     "require-dev": {
         "nunomaduro/collision": "^5.3",
@@ -44,7 +50,10 @@
         "test-coverage": "vendor/bin/phpunit --coverage-html coverage"
     },
     "config": {
-        "sort-packages": true
+        "sort-packages": true,
+        "allow-plugins": {
+            "pestphp/pest-plugin": true
+        }
     },
     "extra": {
         "laravel": {
