--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "tests"
   },
   "scripts": {
+    "release": "npm version minor && git push origin && git push origin $(git tag --sort=creatordate | tail -n 1)",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
