--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "strata",
     "promobar"
   ],
-  "author": "Kristoffer Tonning",
+  "author": "Laura Tonning",
   "license": "UNLICENSED",
   "bugs": {
     "url": "https://github.com/astrogoat/promobar/issues"
